[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "pycmdtools"
version = "0.0.85"
requires-python = ">=3.12"
authors = [
	{ name = "Mark Veltzer", email = "mark.veltzer@gmail.com" }
]
maintainers = [
	{ name = "Mark Veltzer", email = "mark.veltzer@gmail.com" }
]
description = "pycmdtools is set of useful command line tools written in python"
readme = "README.md"
license = "MIT"
keywords=[
    "utils",
    "command-line",
    "python",
    "shell",
    "utilities",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Operating System :: OS Independent",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.12",
    "Topic :: Utilities",
    "License :: OSI Approved :: MIT License",
]
dependencies = [
    "pylogconf",
    "pytconf",
    "requests",
    "types-requests",
    "tqdm",
    "numpy",
    "pandas",
    "unidecode",
    "pyyaml",
    "jsonschema",
    "pytidylib",
    "beautifulsoup4",
    "lxml",
    "html5lib",
]

[project.urls]
"Homepage" = "https://github.com/veltzer/pycmdtools"
"Bug Tracker" = "https://github.com/veltzer/pycmdtools/issues"
"Documentation" = "https://veltzer.github.io/pycmdtools"
"Download" = "https://pypi.org/project/pycmdtools/"
"Repository" = "https://github.com/veltzer/pycmdtools"

[project.scripts]
pycmdtools = "pycmdtools.main:main"

[tool.ruff]
line-length = 130

[tool.pytest.ini_options]
pythonpath = ["src"]

[tool.hatch.build.targets.wheel]
packages = ["src/pycmdtools"]

[tool.hatch.build.targets.sdist]
include = [
    "src/pycmdtools/",
    "README.md",
    "LICENSE",
    "pyproject.toml"
]
exclude = [
    ".gitignore",
    ".github/",
    "tests/",
    "docs/",
    "config/",
    "*.md",
]

[tool.mypy]
python_version = "3.12"
warn_return_any = true
warn_unused_configs = true

[tool.hatch.envs.default]
installer = "uv"

[tool.uv.pip]
prerelease = "disallow"
